--- a/Lesson1/app/src/main/res/values/colors.xml
+++ b/Lesson1/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#FF1E63</color>
+    <color name="colorPrimaryDark">#FF1E63</color>
+    <color name="colorAccent">#2845ba</color>
 </resources>
