--- a/Lesson1/app/src/main/res/layout/fragment_contact_details.xml
+++ b/Lesson1/app/src/main/res/layout/fragment_contact_details.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list2"
+    android:id="@+id/contactDetailsContainer"
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Frag1">
+    tools:context=".ContactListFragment">
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/profilePicture"
         android:layout_width="186dp"
         android:layout_height="160dp"
         android:layout_margin="10dp"
@@ -21,51 +19,51 @@
         android:src="@drawable/ic_launcher_foreground" />
 
     <LinearLayout
-        android:layout_width="204dp"
-        android:layout_height="230dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/textview6" />
+            android:text="@string/name" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textViewTelephoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/textview7" />
+            android:text="@string/telephoneNumber" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textViewTelephoneNumber2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/textview8" />
+            android:text="@string/telephoneNumber2" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textViewEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/textview8" />
+            android:text="@string/email" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textViewEmail2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/textview8" />
+            android:text="@string/email2" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/textViewDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/textview8" />
+            android:text="@string/description" />
 
     </LinearLayout>
 
