--- a/Lesson1/app/src/main/res/layout/fragment_contact_list.xml
+++ b/Lesson1/app/src/main/res/layout/fragment_contact_list.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list1"
+    android:id="@+id/contactListContainer"
     android:layout_width="match_parent"
     android:clickable="false"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".Frag1"
+    tools:context=".ContactListFragment"
     android:focusable="false">
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/profilePicture"
         android:layout_width="155dp"
         android:layout_height="155dp"
         android:layout_margin="10dp"
@@ -22,23 +21,23 @@
 
     <LinearLayout
         android:id="@+id/textBlock"
-        android:layout_width="213dp"
-        android:layout_height="155dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/textview6" />
+            android:text="@string/name" />
 
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="144dp"
+            android:id="@+id/textViewTelephoneNumber"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/textview7" />
+            android:text="@string/telephoneNumber" />
     </LinearLayout>
 
 
